public static class AnimationKeys
{
    public const string Idle = "Idle";
    public const string Move = "Move";
    public const string Jump = "Jump";
    public const string Dash = "Dash";
    public const string Fall = "Fall";
    public const string WallSlide = "WallSlide";
    public const string PrimeAttack = "Attack";
    public const string Attack = "Attack";
    public const string Stun = "Stunned";
    public const string CounterAttack = "CounterAttack";
    public const string SuccessfulCounterAttack = "SuccessfulCounterAttack";
}
